fix: number alignment

--- a/client/src/Components/Polls.css
+++ b/client/src/Components/Polls.css
@@ -99,7 +99,7 @@
     grid-template-columns: 1fr;
   }
   .pollsnumber {
-    width: 60px;
+    width: 100% !important;
     height: 58px;
     margin-top: -70px;
     font-family: "Gilmer";
